--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,8 @@ FLASK_ENV=development
 
 # Change the following values for local development.
 SECRET_KEY=secret-key
+
+#trello
+TOKEN=secret-token
+APIKEY=api-key
+BOARD_ID=board_id
